--- a/force-app/main/default/classes/VDT_OptionWrapper.cls
+++ b/force-app/main/default/classes/VDT_OptionWrapper.cls
@@ -3,12 +3,19 @@
  * @author BASE Life Science
  * @since 2021.03.01
  */
+
 public inherited sharing class VDT_OptionWrapper {
     @AuraEnabled public String label;
     @AuraEnabled public String value;
+    @AuraEnabled public String secondaryLabel;
 
     public VDT_OptionWrapper(String label, String value) {
         this.label = label;
         this.value = value;
     }
+
+    public void setSecondaryLabel(String secondaryLabel) {
+        this.secondaryLabel = secondaryLabel;
+    }
+
 }
