fixing logs and using territory selector

--- a/force-app/main/default/classes/VDT_DataCalculationSelector.cls
+++ b/force-app/main/default/classes/VDT_DataCalculationSelector.cls
@@ -386,6 +386,7 @@ public inherited sharing class VDT_DataCalculationSelector {
             }
         );
 
+        System.debug('TEST:query: ' + query);
         return Database.query(query);
     }
 }
